# visual-video-task

./: .gitignore  PSYCHOPY_IMAGE_B_README.md  README.md  _check_device_logic.py  brainco_device_doctor.py  cli.py  code_artifact.py  config.yaml  experiment.md  experiment_image.md  experiment_ui.py  gui.py  psychopy_image_b_experiment.py  psychopy_image_b_rating.py  pyproject.toml
acquisition/: __init__.py  base.py  brainco_acquirer.py  dummy_acquirer.py  external_recorder_acquirer.py  factory.py  lsl_acquirer.py  neuracle_acquirer.py
collect/: README.md  __init__.py  neuracle_api.py
image_library/: manifest.json
image_library/formal/: README.md  manifest.json
protocol/: __init__.py  session_recorder.py  video_protocol.py
tasks/: __init__.py  image_core.py  image_paradigms.py  task_factory.py  task_image_a.py  task_image_b.py  task_visual.py
tests/: test_bcigo_external_recording.py  test_device_marker_isolation.py  test_image_core_sessions.py  test_lsl_backends.py  test_neuracle_memory_bounds.py  test_psychopy_display_scaling.py  test_psychopy_resume_segments.py  test_session_recorder_segments.py
utils/: __init__.py  markers.py  preprocessing.py  session_store.py  stream_writer.py  video_library.py
video_library/: README.md  _do_rename.py  _rename.cmd  manifest.json
